[gd_scene load_steps=17 format=3 uid="uid://c1522njwe33p6"]

[ext_resource type="Script" uid="uid://c3t2awagwvcj" path="res://scripts/CharacterValkyrie.gd" id="1_f14pw"]
[ext_resource type="Texture2D" uid="uid://c5mwn2tkddved" path="res://assets/Valkyrie/idle.png" id="2_f14pw"]
[ext_resource type="Texture2D" uid="uid://bgag2m1dxpr16" path="res://assets/Valkyrie/walk.png" id="3_f14pw"]
[ext_resource type="Texture2D" uid="uid://cagtexj4hjl5e" path="res://assets/Valkyrie/slash.png" id="4_f14pw"]
[ext_resource type="Script" uid="uid://b813safp4egwv" path="res://scripts/StateMachineValkyrie.gd" id="5_awdhw"]
[ext_resource type="PackedScene" uid="uid://d1wmm4yrqyrcu" path="res://scenes/direction_arrow.tscn" id="6_873ht"]
[ext_resource type="Script" uid="uid://c2uuygog3xb5j" path="res://scripts/StateValkyrieIdle.gd" id="6_ths34"]
[ext_resource type="Script" uid="uid://b0w4pv8t4bpp7" path="res://scripts/StateValkyrieWalk.gd" id="7_upwqe"]
[ext_resource type="Script" uid="uid://da04ywu3slwpl" path="res://scripts/StateValkyrieSlash.gd" id="8_873ht"]
[ext_resource type="Script" uid="uid://bguv88gn5wetp" path="res://scripts/CameraValkyrie.gd" id="10_6l51o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6l51o"]
size = Vector2(50, 30)

[sub_resource type="Animation" id="Animation_ggcuj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DWalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2DSlash:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xvg8y"]
resource_name = "idle"
length = 1.8
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DIdle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_f14pw"]
resource_name = "slash"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DSlash:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_2n2ib"]
resource_name = "walk"
length = 2.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2DWalk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d301r"]
_data = {
&"RESET": SubResource("Animation_ggcuj"),
&"idle": SubResource("Animation_xvg8y"),
&"slash": SubResource("Animation_f14pw"),
&"walk": SubResource("Animation_2n2ib")
}

[node name="CharacterValkyrie" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_f14pw")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_awdhw")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_ths34")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("7_upwqe")

[node name="Slash" type="Node" parent="StateMachine"]
script = ExtResource("8_873ht")

[node name="Sprite2DDirectionArrow" parent="." instance=ExtResource("6_873ht")]

[node name="Sprite2DIdle" type="Sprite2D" parent="."]
texture = ExtResource("2_f14pw")
hframes = 6
vframes = 3

[node name="Sprite2DWalk" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_f14pw")
hframes = 6
vframes = 4

[node name="Sprite2DSlash" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_f14pw")
hframes = 6
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 67)
shape = SubResource("RectangleShape2D_6l51o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d301r")
}
autoplay = "idle"

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("10_6l51o")
